--- a/src/app/blog-post-page/blog-post-page.component.html
+++ b/src/app/blog-post-page/blog-post-page.component.html
@@ -1,1 +1,36 @@
-<p>blog-post-page works!</p>
+<mat-toolbar style="background-color:#004365; color:white; padding-left: 46px;" [routerLink]="['/blog-page']">
+  Post Page
+</mat-toolbar>
+
+<mat-card style="padding:80px" class="mat-elevation-z4" >
+<mat-card-title>
+<h1 style="text-align: center; font-size: 40px; font-weight: bold">{{title}}</h1>
+  </mat-card-title>
+    <img mat-card-image style="height: 1000px" src='https://image.jeuxvideo.com/medias-sm/161191/1611914912-5985-card.jpg' alt="Photo of a Shiba Inu">
+  <mat-card-content>
+  <div class="infos">
+  <div mat-card-avatar class="example-header-image"></div>
+  <mat-card-title style="padding-bottom:-28px">&nbsp;Shiba Inu</mat-card-title>
+    <p style="color:grey; text-align: right; margin-top:3px">
+      &nbsp;	the 22/01
+    </p>
+    </div>
+  </mat-card-content>
+  <mat-card-content style="font-size:20px">
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper finibus nisl sed feugiat. Aliquam sagittis odio odio. Pellentesque interdum ante dolor, quis vulputate magna eleifend ut. Mauris aliquet urna quis sodales iaculis. Fusce nec finibus ligula. Pellentesque porttitor ultricies rhoncus. Mauris placerat viverra felis vel pharetra. Mauris nec libero ut ligula facilisis scelerisque sed ac lacus.
+
+Cras tincidunt velit sit amet mi egestas ultrices. Integer congue tortor at ex lacinia auctor. Integer id lorem hendrerit sem faucibus porttitor. Integer a erat ac dolor sollicitudin aliquam non eu dui. Duis vitae lobortis velit. Praesent id rhoncus lacus. Integer tempor tortor purus, sit amet consectetur turpis luctus eget. Suspendisse potenti. Donec id laoreet tellus. Integer vehicula ultrices erat, eget lobortis ex tincidunt id. Nunc finibus suscipit sapien vel tristique.
+
+Sed in dapibus urna, sed vulputate justo. Morbi non arcu faucibus mauris pellentesque rutrum non in leo. Aliquam vulputate ac velit vel laoreet. Quisque id elit convallis eros tempor scelerisque nec et elit. Vestibulum feugiat euismod neque non placerat. Vestibulum vitae turpis risus. Donec posuere nulla sit amet nisl malesuada ullamcorper. Sed eget scelerisque quam. Sed pulvinar vel enim at luctus.
+
+Duis sed placerat tellus. Ut viverra arcu scelerisque justo finibus, eget fermentum est maximus. Nam magna lorem, dapibus at felis sed, mollis imperdiet ante. Morbi maximus, dolor eget pellentesque porttitor, enim est scelerisque ipsum, vel lobortis dui orci eget ligula. Duis massa erat, congue egestas ultrices et, consectetur at ante. Nulla maximus semper turpis et dapibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis lectus in felis pulvinar placerat. Morbi quis consequat ipsum. Morbi consequat quam felis, in consectetur metus gravida vel. Mauris tincidunt ligula tortor, eu auctor tortor fringilla sed. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque ornare ut massa eget bibendum. Vivamus quis tincidunt libero, ut vulputate sem.
+
+Phasellus at mauris a erat rhoncus ultrices lacinia laoreet nisl. Morbi dapibus augue non justo eleifend vehicula. Suspendisse nec lectus consectetur, iaculis nibh congue, vehicula felis. Nam pellentesque mauris ac risus tincidunt, a ullamcorper est porttitor. Nam auctor, diam ut rutrum commodo, diam massa finibus massa, in bibendum neque lectus et erat. Nulla auctor aliquam ex a semper. Sed congue feugiat elit, sed feugiat ipsum suscipit a. Aliquam erat volutpat.
+    </mat-card-content>
+    <mat-card-actions>
+    <button mat-button style="font-size:20px">Share</button>
+    </mat-card-actions>
+    </mat-card>
+<mat-card-footer>
+.
+</mat-card-footer>
