--- a/src/app/blog-post-page/blog-post-page.component.html
+++ b/src/app/blog-post-page/blog-post-page.component.html
@@ -6,7 +6,7 @@
 <mat-card-title>
 <h1 style="text-align: center; font-size: 40px; font-weight: bold">{{title}}</h1>
   </mat-card-title>
-    <img mat-card-image style="height: 1000px" src='https://image.jeuxvideo.com/medias-sm/161191/1611914912-5985-card.jpg' alt="Photo of a Shiba Inu">
+    <img mat-card-image style="height: 1000px" src='{{img}}' alt="Photo of a Shiba Inu">
   <mat-card-content>
   <div class="infos">
   <div mat-card-avatar class="example-header-image"></div>
