[ADD] modify post page

--- a/src/app/blog-main-page/blog-main-page.component.html
+++ b/src/app/blog-main-page/blog-main-page.component.html
@@ -10,7 +10,7 @@
   <mat-card-title id="test">
   '{{num.title}}'
   </mat-card-title>
-    <p style="color:grey; text-align: right; padding-bottom:30px">
+    <p style="position: relative; color:grey; text-align: right;">
       22/01
     </p>
   </mat-card-content>
