--- a/src/app/blog-post-page/blog-post-page.component.html
+++ b/src/app/blog-post-page/blog-post-page.component.html
@@ -2,7 +2,7 @@
   Post Page
 </mat-toolbar>
 
-<mat-card style="padding:80px" class="mat-elevation-z4" >
+<mat-card style="padding:60px; width: 1786px" class="mat-elevation-z4" >
 <mat-card-title>
 <h1 style="text-align: center; font-size: 40px; font-weight: bold">{{title}}</h1>
   </mat-card-title>
