[ADD] new button

--- a/src/app/blog-main-page/blog-main-page.component.html
+++ b/src/app/blog-main-page/blog-main-page.component.html
@@ -8,7 +8,7 @@
     <img mat-card-image src='{{num.src}}' alt="Photo of a Shiba Inu">
   <mat-card-content>
   <mat-card-title id="test">
-  '{{num.title}}'
+  {{num.title}}
   </mat-card-title>
     <p style="position: relative; color:grey; text-align: right;">
       22/01
@@ -18,5 +18,6 @@
   </div>
 </div>
 </div>
+<button mat-raised-button style="  left: 48%; bottom: 5%">See more</button>
 
 <h1>{{size}}</h1>
