--- a/src/app/blog-main-page/blog-main-page.component.html
+++ b/src/app/blog-main-page/blog-main-page.component.html
@@ -3,7 +3,7 @@
 </mat-toolbar>
 <div class="content">
 <div fxLayout="row wrap" fxLayoutGap="16px grid">
-  <div fxFlex="25%" style="height:40%; width: 30%; display: inline-block; margin: 20px;" *ngFor="let num of items">
+  <div fxFlex="25%" style="height:40%; width: 23%; display: inline-block; margin: 10px" *ngFor="let num of items">
     <mat-card [routerLink]="['../blog-post/' + num.title]" (click)="gotoBlog(num.title)" class="mat-elevation-z4" >
     <img mat-card-image style="height:60%" src='{{num.src}}' alt="Photo of a Shiba Inu">
   <mat-card-content>
